Added uptime widget to dashboard of monitor

--- a/Plugin/src/main/res/values/colors.xml
+++ b/Plugin/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="dashboard_blue">#FF04B1C5</color>
     <color name="dashboard_dark_orange">#FFF2663D</color>
     <color name="dashboard_light_orange">#FFFFA440</color>
+    <color name="dashboard_dark_grey">#373737</color>
     <color name="dashboard_purple">#963d6a</color>
     <color name="dashboard_lime">#8cb83f</color>
     <color name="black">#000000</color>
