Added a landscape view, new alert dialog
In previous commit, added backwards support to api 16

--- a/Plugin/src/main/res/layout-land/activity_main.xml
+++ b/Plugin/src/main/res/layout-land/activity_main.xml
@@ -11,26 +11,29 @@
         android:paddingBottom="58dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="horizontal">
 
         <LinearLayout
-            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_weight="1">
+            <LinearLayout
+            android:baselineAligned="false"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1">
-
+            android:layout_weight="1"
+            android:orientation="vertical">
             <LinearLayout
                 android:clickable="true"
                 android:elevation="3dp"
                 android:gravity="center"
                 android:orientation="vertical"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_weight="1"
-                android:layout_height="match_parent"
+                android:layout_height="0dp"
                 android:background="@drawable/shape_uptime"
-                android:layout_marginTop="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
+                android:layout_margin="8dp"
                 android:id="@+id/commandBtn1">
 
                 <LinearLayout
@@ -71,7 +74,7 @@
             </LinearLayout>
         </LinearLayout>
 
-        <LinearLayout
+            <LinearLayout
             android:baselineAligned="false"
             android:layout_width="match_parent"
             android:layout_height="0dp"
@@ -108,7 +111,7 @@
                         android:textColor="@android:color/white"
                         android:layout_height="wrap_content"
                         android:text="@string/cpu_usage" />
-                    </LinearLayout>
+                </LinearLayout>
                 <com.sonelli.juicessh.performancemonitor.views.AutoResizeTextView
                     android:id="@+id/cpu_usage"
                     android:layout_height="0dp"
@@ -125,10 +128,7 @@
             <LinearLayout
                 android:clickable="true"
                 android:elevation="3dp"
-                android:layout_marginLeft="0dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
+                android:layout_margin="8dp"
                 android:gravity="center"
                 android:background="@drawable/shape_free_memory"
                 android:orientation="vertical"
@@ -155,7 +155,7 @@
                         android:fontFamily="sans-serif"
                         android:textColor="@android:color/white"
                         android:text="@string/free_memory" />
-                    </LinearLayout>
+                </LinearLayout>
                 <com.sonelli.juicessh.performancemonitor.views.AutoResizeTextView
                     android:layout_height="0dp"
                     android:layout_weight="0.75"
@@ -169,163 +169,167 @@
 
             </LinearLayout>
         </LinearLayout>
+        </LinearLayout>
 
         <LinearLayout
-            android:baselineAligned="false"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:orientation="horizontal">
-
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_weight="1">
             <LinearLayout
-                android:clickable="true"
-                android:elevation="3dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginBottom="8dp"
-                android:orientation="vertical"
-                android:layout_width="0dp"
+                android:baselineAligned="false"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
                 android:layout_weight="1"
-                android:layout_height="match_parent"
-                android:background="@drawable/shape_load_average"
-                android:gravity="center" >
+                android:orientation="horizontal">
 
                 <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="0.5"
-                    android:gravity="bottom|center_horizontal"
-                    android:orientation="horizontal">
-                    <ImageView
-                        android:layout_width="25dp"
-                        android:layout_height="25dp"
-                        android:src="@drawable/load" />
-                    <TextView
-                        android:layout_marginLeft="7dp"
-                        android:textStyle="bold"
-                        android:layout_width="wrap_content"
-                        android:textSize="22sp"
+                    android:clickable="true"
+                    android:elevation="3dp"
+                    android:layout_margin="8dp"
+                    android:orientation="vertical"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/shape_load_average"
+                    android:gravity="center" >
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="0.5"
+                        android:gravity="bottom|center_horizontal"
+                        android:orientation="horizontal">
+                        <ImageView
+                            android:layout_width="25dp"
+                            android:layout_height="25dp"
+                            android:src="@drawable/load" />
+                        <TextView
+                            android:layout_marginLeft="7dp"
+                            android:textStyle="bold"
+                            android:layout_width="wrap_content"
+                            android:textSize="22sp"
+                            android:fontFamily="sans-serif"
+                            android:textColor="@android:color/white"
+                            android:layout_height="wrap_content"
+                            android:text="@string/load_average" />
+                    </LinearLayout>
+
+                    <com.sonelli.juicessh.performancemonitor.views.AutoResizeTextView
+                        android:layout_height="0dp"
+                        android:layout_weight="0.75"
+                        android:id="@+id/load_average"
                         android:fontFamily="sans-serif"
+                        android:lines="1"
+                        android:layout_width="match_parent"
+                        android:textSize="36sp"
                         android:textColor="@android:color/white"
-                        android:layout_height="wrap_content"
-                        android:text="@string/load_average" />
+                        android:text="-"
+                        android:gravity="center_horizontal|top" />
+
                 </LinearLayout>
 
-                <com.sonelli.juicessh.performancemonitor.views.AutoResizeTextView
-                    android:layout_height="0dp"
-                    android:layout_weight="0.75"
-                    android:id="@+id/load_average"
-                    android:fontFamily="sans-serif"
-                    android:lines="1"
-                    android:layout_width="match_parent"
-                    android:textSize="55sp"
-                    android:textColor="@android:color/white"
-                    android:text="-"
-                    android:gravity="center_horizontal|top" />
+            </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:clickable="true"
+                    android:elevation="3dp"
+                    android:layout_margin="8dp"
+                    android:gravity="center"
+                    android:orientation="vertical"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/shape_network_usage">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="0.5"
+                        android:gravity="bottom|center_horizontal"
+                        android:orientation="horizontal">
+                        <ImageView
+                            android:layout_width="25dp"
+                            android:layout_height="25dp"
+                            android:src="@drawable/network" />
+                        <TextView
+                            android:layout_marginLeft="7dp"
+                            android:textStyle="bold"
+                            android:layout_width="wrap_content"
+                            android:textSize="22sp"
+                            android:fontFamily="sans-serif"
+                            android:textColor="@android:color/white"
+                            android:layout_height="wrap_content"
+                            android:text="@string/network" />
+
+                    </LinearLayout>
+                    <com.sonelli.juicessh.performancemonitor.views.AutoResizeTextView
+                        android:layout_height="0dp"
+                        android:layout_weight="0.75"
+                        android:id="@+id/network_usage"
+                        android:fontFamily="sans-serif"
+                        android:layout_width="match_parent"
+                        android:textSize="36sp"
+                        android:textColor="@android:color/white"
+                        android:text="-"
+                        android:gravity="center_horizontal|top" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:clickable="true"
+                    android:elevation="3dp"
+                    android:layout_margin="8dp"
+                    android:gravity="center"
+                    android:background="@drawable/shape_disk_usage"
+                    android:orientation="vertical"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="match_parent">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="0.5"
+                        android:gravity="bottom|center_horizontal"
+                        android:orientation="horizontal">
+                        <ImageView
+                            android:layout_width="25dp"
+                            android:layout_height="25dp"
+                            android:src="@drawable/disk" />
+                        <TextView
+                            android:layout_marginLeft="7dp"
+                            android:textStyle="bold"
+                            android:layout_width="wrap_content"
+                            android:textSize="22sp"
+                            android:fontFamily="sans-serif"
+                            android:textColor="@android:color/white"
+                            android:layout_height="wrap_content"
+                            android:text="@string/disk" />
+
+                    </LinearLayout>
+                    <com.sonelli.juicessh.performancemonitor.views.AutoResizeTextView
+                        android:layout_height="0dp"
+                        android:layout_weight="0.75"
+                        android:id="@+id/disk_usage"
+                        android:fontFamily="sans-serif"
+                        android:layout_width="match_parent"
+                        android:textSize="36sp"
+                        android:textColor="@android:color/white"
+                        android:text="-"
+                        android:gravity="center_horizontal|top" />
+
+                </LinearLayout>
             </LinearLayout>
 
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:orientation="horizontal">
-
-            <LinearLayout
-                android:clickable="true"
-                android:elevation="3dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginBottom="8dp"
-                android:gravity="center"
-                android:orientation="vertical"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="match_parent"
-                android:background="@drawable/shape_network_usage">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="0.5"
-                    android:gravity="bottom|center_horizontal"
-                    android:orientation="horizontal">
-                    <ImageView
-                        android:layout_width="25dp"
-                        android:layout_height="25dp"
-                        android:src="@drawable/network" />
-                    <TextView
-                        android:layout_marginLeft="7dp"
-                        android:textStyle="bold"
-                        android:layout_width="wrap_content"
-                        android:textSize="22sp"
-                        android:fontFamily="sans-serif"
-                        android:textColor="@android:color/white"
-                        android:layout_height="wrap_content"
-                        android:text="@string/network" />
-
-                    </LinearLayout>
-                <com.sonelli.juicessh.performancemonitor.views.AutoResizeTextView
-                    android:layout_height="0dp"
-                    android:layout_weight="0.75"
-                    android:id="@+id/network_usage"
-                    android:fontFamily="sans-serif"
-                    android:layout_width="match_parent"
-                    android:textSize="36sp"
-                    android:textColor="@android:color/white"
-                    android:text="-"
-                    android:gravity="center_horizontal|top" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:clickable="true"
-                android:elevation="3dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginBottom="8dp"
-                android:gravity="center"
-                android:background="@drawable/shape_disk_usage"
-                android:orientation="vertical"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="match_parent">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="0.5"
-                    android:gravity="bottom|center_horizontal"
-                    android:orientation="horizontal">
-                    <ImageView
-                        android:layout_width="25dp"
-                        android:layout_height="25dp"
-                        android:src="@drawable/disk" />
-                    <TextView
-                        android:layout_marginLeft="7dp"
-                        android:textStyle="bold"
-                        android:layout_width="wrap_content"
-                        android:textSize="22sp"
-                        android:fontFamily="sans-serif"
-                        android:textColor="@android:color/white"
-                        android:layout_height="wrap_content"
-                        android:text="@string/disk" />
-
-                    </LinearLayout>
-                <com.sonelli.juicessh.performancemonitor.views.AutoResizeTextView
-                    android:layout_height="0dp"
-                    android:layout_weight="0.75"
-                    android:id="@+id/disk_usage"
-                    android:fontFamily="sans-serif"
-                    android:layout_width="match_parent"
-                    android:textSize="36sp"
-                    android:textColor="@android:color/white"
-                    android:text="-"
-                    android:gravity="center_horizontal|top" />
-
-            </LinearLayout>
-        </LinearLayout>
 
     </LinearLayout>
 
